Show the activity modal more menu on mobile too. Make sure the move popover is in the right place.

--- a/scss/partials/_activity_modal.scss
+++ b/scss/partials/_activity_modal.scss
@@ -205,6 +205,11 @@ div.activity-modal-container {
               top: 60px;
               left: unset;
               right: 14px;
+
+              @include mobile() {
+                right: 8px;
+                top: 124px;
+              }
             }
 
             button.activity-modal-more {
@@ -241,6 +246,12 @@ div.activity-modal-container {
               overflow: visible;
               margin: 0px;
               z-index: 100;
+
+              @include mobile() {
+                top: 124px;
+                left: unset;
+                right: 8px;
+              }
 
               div.triangle {
                 position: absolute;
